--- a/index.html
+++ b/index.html
@@ -90,4 +90,6 @@
 <!-- SCRIPT -->
 <script type="module" src="./data/recipes.js"></script>
 <script type="module" src="./scripts/index.js"></script>
+<script type="module" src="./scripts/utils/searchbar.js"></script>
+<script type="module" src="./scripts/utils/searchtag.js"></script>
 </html>
